--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Praise Donald Trump</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 	<meta charset="utf-8">
 	<script>
 		$(function() {
@@ -28,7 +29,7 @@
 		}
 
 		h1 {
-            color: #D3D3D3;
+            color: #cca969;
             font-family: 'PT Sans', sans-serif;
             font-size: 90px;
             text-align: center;
@@ -64,7 +65,7 @@
 		  text-align: center;
 		  font-size: 28px;
 		  padding: 20px;
-		  width: 240px;
+		  width: 107px;
 		  transition: all 0.5s;
 		  cursor: pointer;
 		  margin: 5px;
@@ -237,7 +238,7 @@
 </head>
 <body>
 	<div style="height:810px;background-color:#1a2c56;">
-		<h1 style="color:black; background-color:white">Our Great Overlord</h1>
+		<h1 style="background-color:#291B2C">Donald John Trump</h1>
 
 		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Donald_Trump_August_19%2C_2015_%28cropped%29.jpg/440px-Donald_Trump_August_19%2C_2015_%28cropped%29.jpg" style="display: block; margin-left: auto; margin-right: auto" alt="mr.donald j trump could not be loaded and he is sad"></img>
 
@@ -250,9 +251,8 @@
 
 	<div class="parallax"></div>
 
-	<div style="height:450px;background-color:#1a2c56;">
+	<div style="height:380px;background-color:#1a2c56;">
 		<section id="section02" >
-			<h1 style="background-color:#1a2c56; font-size: 70px;">Biography</h1>
 
 			<h4>Donald John Trump (born June 14, 1946) is an American businessman, television personality, author, politician, and the Republican Party nominee for President of the United States in the 2016 election. He is chairman of The Trump Organization, which is the principal holding company for his real estate ventures and other business interests. <br>Born and raised in New York City, Trump received a bachelor's degree in economics from the Wharton School of the University of Pennsylvania in 1968. While attending college, Trump worked in his father <br>Fred Trump's real estate and construction firm. He was given control of the business in 1971 and later renamed it "The Trump Organization". During his career, Trump has built skyscrapers, hotels, casinos,<br> golf courses, and numerous other developments across North and South America, Europe and Asia, many of which bear his name, such as the Trump Place apartment complex in Manhattan. He sought the Reform Party presidential nomination in 2000 but withdrew before voting began. Listed by Forbes among the world's wealthiest 500 billionaires, Trump and his businesses, as well as his personal life and political views, have for decades received considerable media exposure. He hosted and co-produced The Apprentice, a reality television series on NBC, from 2004 to 2015, for which he received a star on the Hollywood Walk of Fame. He has also made numerous cameo appearances in films and television series, and appeared at the Miss USA pageants which he owned from 1996 to 2015.</h4>
 
@@ -261,15 +261,16 @@
 			</div>
 
 			<div class="buttonHolder">
-			<a href="https://twitter.com/realdonaldtrump" target="_blank"><button class="button" style="vertical-align:middle"><span>His Twitter </span></button></a>
-			<a href="https://www.facebook.com/DonaldTrump" target="_blank"><button class="button" style="vertical-align:middle"><span>His Facebook </span></button></a>
-			<a href="https://instagram.com/realdonaldtrump" target="_blank"><button class="button" style="vertical-align:middle"><span>His Instagram </span></button></a>
+			<a href="https://twitter.com/realdonaldtrump" target="_blank"><button class="button" style="vertical-align:middle"><span><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></span></button></a>
+			<a href="https://www.facebook.com/DonaldTrump" target="_blank"><button class="button" style="vertical-align:middle"><span><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></span></button></a>
+			<a href="https://instagram.com/realdonaldtrump" target="_blank"><button class="button" style="vertical-align:middle"><span><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></span></button></a>
+			<a href="https://www.youtube.com/DonaldTrump" target="_blank"><button class="button" style="vertical-align:middle"><span><i class="fa fa-youtube-play fa-lg" aria-hidden="true"></i></span></button></a>
+			<a href="https://plus.google.com/+DonaldJTrumpforPresident" target="_blank"><button class="button" style="vertical-align:middle"><span><i class="fa fa-google-plus fa-lg" aria-hidden="true"></i></span></button></a>
 			</div>
 
 			<br>
 
 			<div class="pHolder">
-			<h3 style="font-size:5px; font-family: 'PT Sans', sans-serif; text-align: center; color:#d1a683;">This website was designed and created by Austin Liu as a satirical joke. It is not meant to be taken seriously and should not be taken seriously. All of this is also under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</h3>
 			<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="color: #d1a683;">
 				<img alt="Creative Commons License" style="border-width:0;" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" style="" />
 			</div>	
