--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
 	<title>Praise Donald Trump</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.8/jquery.slicknav.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.8/slicknav.css" />
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 	<meta charset="utf-8">
 	<script>
-		$(function() {
-		  $('a[href*="#"]:not([href="#"])').click(function() {
-		    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-		      var target = $(this.hash);
-		      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-		      if (target.length) {
-		        $('html, body').animate({
-		          scrollTop: target.offset().top
-		        }, 4500);
-		        return false;
-		      }
+		$(document).on('click', 'a[href^="#"]', function(e) {
+		    // target element id
+		    var id = $(this).attr('href');
+
+		    // target element
+		    var $id = $(id);
+		    if ($id.length === 0) {
+		        return;
 		    }
-		  });
+
+		    // prevent standard hash navigation (avoid blinking in IE)
+		    e.preventDefault();
+
+		    // top position relative to the document
+		    var pos = $(id).offset().top;
+
+		    // animated top scrolling
+		    $('body, html').animate({scrollTop: pos}, 3500);
 		});
 	</script>
 	<style type="text/css">
@@ -234,9 +241,36 @@
 		    background-size: cover;
 		}
 
+		.slicknav_menu {
+	    display:block;
+    	position: fixed;
+    	top: 0;
+    	font-family: 'PT Sans', sans-serif;
+	    }
+
+		#menu {
+	        display: none;
+	    }
 	</style>
 </head>
 <body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.8/jquery.slicknav.js"></script>
+
+	<script>
+		$(function(){
+			$(function(){
+				$('#menu').slicknav();
+			});
+		});
+	</script>
+
+	<ul id="menu">
+		<li><a href="https://arcnz.github.io/hailhillary/">Hillary's Page</a></li>
+		<li><a href="https://github.com/Arcnz/praisetrump">Code @ Github</a></li>
+		<li><a href="https://www.youtube.com/watch?v=i9-5DJhBh6M">For More About Donald</a></li>
+	</ul>
+
 	<div style="height:810px;background-color:#1a2c56;">
 		<h1 style="background-color:#291B2C">Donald John Trump</h1>
 
@@ -245,13 +279,13 @@
 		<br>
 
 		<section id="section01" class="demo">
-			<a href="#section02"><span></span>Scroll</a>
+			<a href="#section02" id="button"><span></span>Scroll</a>
 		</section>
 	</div>	
 
 	<div class="parallax"></div>
 
-	<div style="height:380px;background-color:#1a2c56;">
+	<div id="myDiv"; style="height:380px;background-color:#1a2c56;">
 		<section id="section02" >
 
 			<h4>Donald John Trump (born June 14, 1946) is an American businessman, television personality, author, politician, and the Republican Party nominee for President of the United States in the 2016 election. He is chairman of The Trump Organization, which is the principal holding company for his real estate ventures and other business interests. <br>Born and raised in New York City, Trump received a bachelor's degree in economics from the Wharton School of the University of Pennsylvania in 1968. While attending college, Trump worked in his father <br>Fred Trump's real estate and construction firm. He was given control of the business in 1971 and later renamed it "The Trump Organization". During his career, Trump has built skyscrapers, hotels, casinos,<br> golf courses, and numerous other developments across North and South America, Europe and Asia, many of which bear his name, such as the Trump Place apartment complex in Manhattan. He sought the Reform Party presidential nomination in 2000 but withdrew before voting began. Listed by Forbes among the world's wealthiest 500 billionaires, Trump and his businesses, as well as his personal life and political views, have for decades received considerable media exposure. He hosted and co-produced The Apprentice, a reality television series on NBC, from 2004 to 2015, for which he received a star on the Hollywood Walk of Fame. He has also made numerous cameo appearances in films and television series, and appeared at the Miss USA pageants which he owned from 1996 to 2015.</h4>
