--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
 	    display:block;
     	position: fixed;
     	top: 0;
-    	font-family: 'PT Sans', sans-serif;
+    	left: 0;
     	width: 10%;
+    	font-family: 'PT Sans', sans-serif;
 	    }
 
 		#menu {
