--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	</ul>
 
 	<div style="height:810px;background-color:#1a2c56;">
-		<h1 style="background-color:#291B2C">Donald John Trump</h1> <h4>don't believe me alex?</h4>
+		<h1 style="background-color:#291B2C">Donald John Trump<h4>don't believe me alex?</h4></h1>
 
 		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Donald_Trump_August_19%2C_2015_%28cropped%29.jpg/440px-Donald_Trump_August_19%2C_2015_%28cropped%29.jpg" style="display: block; margin-left: auto; margin-right: auto" alt="mr.donald j trump could not be loaded and he is sad"></img>
 
